<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>range_sensor_layer</name>
  <version>1.0.0</version>
  <description>This is a range-sensor sensor_msgs/Range based obstacle layer for Navigation2</description>
  <maintainer email="andreas.klintberg@gmail.com">Andreas Klintberg</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
